--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 a:link {
-  color: white;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
@@ -16,13 +16,13 @@ a:visited {
 }
 
 a:hover {
-  color: red;
+  color: yellow;
   background-color: transparent;
   text-decoration: underline;
 }
 
 a:active {
-  color: yellow;
+  color: red;
   background-color: transparent;
   text-decoration: underline;
 }
@@ -32,16 +32,56 @@ a:active {
     flex-wrap: wrap;
     background-color: DodgerBlue;
 }
-.flex-container > div {
+
+img{
+
+    max-width: inherit;
+    max-height: 300px;
+
+    }
+
+
+    /* The sidebar menu */
+.sidenav {
+  max-width: 200px;
+  position: fixed;
+  z-index: 1;
+  left: 10px;
+  background: #eee;
+  overflow-x: hidden;
+  padding: 8px 0;
+}
+
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #2196F3;
+  display: block;
+}
+
+.sidenav a:hover {
+  color: #064579;
+}
+
+.main {
+  margin-left: 150px; /* Same width as the sidebar + left position in px */
+  font-size: 28px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
+}
+
+.product{
     background-color: #f1f1f1;
     width:300px;
-    height:300px;
+    max-width: 300px;
     margin: 10px;
     text-align: center;
-    line-height: 75px;
-    font-size: 30px;
+    font-size: 20px;
+
+
 }
-.flex-container > img{
-    width:100%;
-    height:100%;
-    }
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+ .sidenav {padding-top: 15px;}
+ .sidenav a {font-size: 18px;}
+}
