--- a/views/category.pug
+++ b/views/category.pug
@@ -1,10 +1,14 @@
 extends layout
 
 block content
-    doctype html
-    html(lang='en')
-        include partials/headers
-        body
-            include partials/nav
-            h4= category.name
-            h5 Sous-:
+    include partials/nav
+    br
+    h3 Admin page
+    hr
+    br
+    include partials/sidenav
+    .main
+        h4= category.name
+        ul Sous-Categories:
+            each subcat in category.subCat
+                li= subcat
