changed newProduct view

--- a/views/newProduct.pug
+++ b/views/newProduct.pug
@@ -31,8 +31,6 @@ block content
                         each sub in cat.subCat
                             option(value=cat.id+'.'+sub)= sub
 
+
             br
-            label() Sous-Categorie:
-            input(name = "subCat" type = "text" placeholder = "Chips, Snacks, Doritos")
-            br
-            button(type = "Submit") Add new product!
+            button(type = "Submit") Creer nouvelle categorie !
