minor fixes to display

--- a/views/newCategory.pug
+++ b/views/newCategory.pug
@@ -26,4 +26,4 @@ block content
             label() Sous-Categorie 4:
             input(name = "subCat" type = "text" placeholder = "Surgeles")
             br
-            button(type = "Submit") Add new product!
+            button(type = "Submit") Creer une nouvelle categorie!
