--- a/views/newProduct.pug
+++ b/views/newProduct.pug
@@ -33,4 +33,4 @@ block content
 
 
             br
-            button(type = "Submit") Creer nouvelle categorie !
+            button(type = "Submit") Creer un nouveau produit !
