--- a/views/newCategory.pug
+++ b/views/newCategory.pug
@@ -15,15 +15,15 @@ block content
             input(name = "name" type = "text" required placeholder = "Alimentaire")
             br
             label() Sous-Categorie 1:
-            input(name = "subCat" type = "text" placeholder = "Boissons")
+            input(name = "subCats" type = "text" placeholder = "Boissons")
             br
             label() Sous-Categorie 2:
-            input(name = "subCat" type = "text" placeholder = "Entretien")
+            input(name = "subCats" type = "text" placeholder = "Entretien")
             br
             label() Sous-Categorie 3:
-            input(name = "subCat" type = "text" placeholder = "Fruits, legumes")
+            input(name = "subCats" type = "text" placeholder = "Fruits, legumes")
             br
             label() Sous-Categorie 4:
-            input(name = "subCat" type = "text" placeholder = "Surgeles")
+            input(name = "subCats" type = "text" placeholder = "Surgeles")
             br
             button(type = "Submit") Creer une nouvelle categorie!
