improvements on deleting

--- a/views/category.pug
+++ b/views/category.pug
@@ -53,7 +53,7 @@ block content
                 let r = confirm(
                 `Voulez vous vraiment supprimer la categorie: ${name}
                 Si vous le faite vous supplimerez egalement tout les produits qu'elle contient
-                `
+                ${path}`
                 );
                 if(r==true)
                     location.replace(path)
