--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,22 +1,22 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    z-index: -1;
 }
 
 a:link {
-  color: black;
+  color: blue;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:visited {
-  color: purple;
+  color: DodgerBlue;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:hover {
-  color: blue;
+  color: purple;
   background-color: transparent;
   text-decoration: underline;
 }
@@ -30,7 +30,8 @@ a:active {
 .flex-container {
     display: flex;
     flex-wrap: wrap;
-    background-color: DodgerBlue;
+    justify-content: center;
+    align-items: center;
 }
 
 img{
@@ -66,25 +67,102 @@ img{
 
 .main {
     position: relative;
-  margin-left: 150px; /* Same width as the sidebar + left position in px */
+  margin-left: 200px; /* Same width as the sidebar + left position in px */
   font-size: 28px; /* Increased text to enable scrolling */
   padding: 0px 10px;
 }
+.index{
+    background-color: WhiteSmoke;
+}
+.mainNav{
+    position:sticky;
+    top:0;
+    align-items: baseline;
+    background-color: orange;
+    padding: 10px;
+    z-index: 1;
+}
+.logo{
+    width: auto;
+    height: auto;
+    max-height: 50px;
+    max-width: 100px;
+}
+.selection{
+    padding:20px;
+    margin-top: 10px;
+    margin-bottom: 50px;
+    font: 40px "Apple Chancery";
+    border-radius: 40px;
+    font-family: cursive;
+    background-color: orange;
+    border: solid white;
+    text-align: center;
+}
+.selection button{
+    align-items: center;
+    padding-bottom: 10px;
+    border-radius: 50px;
+    text-align: center;
+    margin-left: 20px;
+    border: solid black;
+    background-color: white;
+    color:black;
+}
+
+
+
 
 .product{
     background-color: #f1f1f1;
+    border-radius: 50px;
+    border: solid black;
     width:300px;
     max-width: 300px;
     margin: 10px;
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
 
 
 }
+.box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    width:150px;
+    height:150px;
+    font-size: 14px;
+    margin:10px;
+}
+
+.title{
+    font-size: 50px;
+
+}
+
 .titleButton{
     position:absolute;
     right:10px;
     top:0px
+}
+
+.productContainer{
+    padding:20px;
+
+}
+.productImg{
+    padding:40px;
+    border: solid black;
+    max-width:300px;
+    max-height:400px;
+}
+
+.addToCart{
+    margin-top:100px;
+    max-height: 120px;
+    border: 1px solid DodgerBlue;
+
 }
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
