--- a/views/product.pug
+++ b/views/product.pug
@@ -1,30 +1,30 @@
-extends layout
+extends clientLayout
 
 block content
-    include partials/nav
-    br
-    h3 Admin page
-    hr
-    br
-    include partials/sidenav
-    .main
-        .blah
-            h3= product.name
-            - var path = `/admin/product/${product._id}`
-            br
-            .titleButton
-                a(href=path+'/edit')
-                    button.btn.btn-primary(type='button')
-                        i.fa.fa-pencil Modifier Produit
-                .addcontainer
-                    a(href=path+'/delete')
-                        button.btn.btn-danger(type='button')
-                            i.fa.fa-trash Suprimer le produit
+    .index
+        .container-fluid
+            .row
+                .col-md-8
+                    h2= product.name
+                    .productImg
+                        img(src=''+product.imgPath)
+                    h3 Prix: #{product.price} FcFa
+                    br
+                    h3 Description de produit:
+                    .description
+                        p=product.description
+                .addToCart.col-md-4
+                    form(action='/addToCart' method='POST')
+                        label() Quantite:
+                        input(type='hidden',value=''+product._id, name='productId')
+                        input(type='number',value=1,name='quantity',min='1',max='20')
+                        button(type='submit') Ajouter Au Panier
 
-            img(src=product.imgPath)
-            p= product.price + "FcFa"
-            br
-            h4 Description du produit:
-            p= product.description
-            br
-            hr
+    br
+    br
+    br
+    br
+    br
+    br
+    br
+    br
