--- a/views/products.pug
+++ b/views/products.pug
@@ -1,32 +1,11 @@
-extends layout
+extends clientLayout
 
 block content
-    include partials/nav
-    br
-    h3 Admin page
-    hr
-    br
-    include partials/sidenav
-    .main
-        if(title)
-            h3= (title)
-        else
-            h3 Produits
-        .titleButton
-            a(href='/admin/product/create')
-                button.btn.btn-success(type='button') Creer un Produit
-
-        hr
-        .search-container
-            form(action='/action_page.php')
-                input(type='text', placeholder='Search..', name='search')
-                button(type='submit')
-                    i.fa.fa-search
-        
-        hr
-        .flex-container
+    h1 Resultat de la recherche ' #{search} '
+    .container-fluid
+        .row
             each product in products
-                a(href='/admin/product/'+product._id)
+                a(href='/product/'+product._id)
                     .product
                         p= product.name
                         img(src=product.imgPath)
