--- a/views/partials/head.pug
+++ b/views/partials/head.pug
@@ -18,5 +18,5 @@
                 i.fa.fa-heart.fa-3x
             a.nav-link(href='#')
                 i.fa.fa-user.fa-3x
-            a.nav-link(href='#')
+            a#shoppingCart.nav-link(href='/cart')
                 i.fa.fa-shopping-cart.fa-3x
