--- a/views/partials/head.pug
+++ b/views/partials/head.pug
@@ -16,7 +16,7 @@
                             i.fa.fa-search
             a.nav-link(href='#')
                 i.fa.fa-heart.fa-3x
-            a.nav-link(href='#')
+            a.nav-link(href='/profile')
                 i.fa.fa-user.fa-3x
             a#shoppingCart.nav-link(href='/cart')
                 i.fa.fa-shopping-cart.fa-3x
