--- a/views/signup.pug
+++ b/views/signup.pug
@@ -11,7 +11,7 @@ block content
             br
             input(name = "email" type = "email" required placeholder = "Addresse Email")
             br
-            input(name = "password" type = "password" required placeholder = "Mot de Passe")
+            input(name = "password" type = "password" required placeholder = "Mot de Passe" minlength=7)
             br
 
             button(type = "Submit") Sign me up!
