--- a/views/cart.pug
+++ b/views/cart.pug
@@ -35,7 +35,9 @@ block content
                 button.order.btn.btn-success(type='submit',formaction='/saveCart')
                     |Sauvegarder panier
                 button.order.btn.btn-primary(type='submit')
-                    |Passez ma commande
+                    |Passer ma commande
+                button.order.btn.btn-danger(type='submit',formaction='/emptyCart')
+                    |Vider le pannier
 
 
 
