--- a/views/signin.pug
+++ b/views/signin.pug
@@ -1,8 +1,7 @@
 extends clientLayout
 
 block content
-    if(message)
-    h4 #{message}
+    
     .main
         .signin
             h3 Se Connecter
@@ -17,3 +16,5 @@ block content
 
     h4 Vous n'avez pas encore de compte ?
         a(href='/signup') Creer un compte
+
+    script.
