added emptyCart and some other stuff

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -10,4 +10,5 @@ block content
         .subCat
             p= 'Name: ' + user.name
             p=  'Email: ' + user.email
-            p=  'Numero whatsApp: ' 
+            p=  'Numero whatsApp: ' + user.phoneNumber
+            p=  'Adresse:' + user.address 
