--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,14 +2,21 @@ doctype html
 html
   head
     title Glovo 241
-    if(title)
-        title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css', integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh', crossorigin='anonymous')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
 
   body
-    block content
+    h1 Glovo241
+    hr
+    br
+    h3 Admin page
+    hr
+    br
+    include partials/sidenav
+    .main#mainContent
+        #informative
+        block content
 
 
     include partials/footer
