--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,19 @@ body {
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
     z-index: -1;
 }
+
+.shoppingCart{
+    position:relative;
+    text-align: center;
+    color: white
+}
+#shopCartNumber{
+    position:absolute;
+    font-size: 20px;
+    font-weight: bold;
+    right:35%;
+    top:21%
+}
 .maxTotal{
     display: flex;
     flex-wrap: wrap;
@@ -221,7 +234,8 @@ img{
 
 }
 .container{
-    margin:auto
+    position:relative;
+
 }
 .container-fluid{
     margin:auto
