--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -7,7 +7,7 @@ script.
 
     async function getNumberItem(cart) {
         console.log('from get number',cart)
-        url = `http://localhost:3000/getCart/${cart}`
+        url = `http://glovo241.herokuapp.com/getCart/${cart}`
         let res = await fetch(url, {
             method: 'GET',
             mode: 'same-origin',
