used https instead of http

--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -5,7 +5,7 @@ script.
 
 
     async function getNumberItem(cart) {
-        url = `http://glovo241.herokuapp.com/getCart/${cart}`
+        url = `https://glovo241.herokuapp.com/getCart/${cart}`
         let res = await fetch(url, {
             method: 'GET',
             mode: 'same-origin',
