--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content:space-between;
-    align-items: center;
+    align-items: baseline;
     z-index: 9999;
 
 }
