changed to textarea

--- a/views/newProduct.pug
+++ b/views/newProduct.pug
@@ -18,7 +18,7 @@ block content
             input(name = "name" type = "text" required placeholder = "Doritos Sweet Hot Chilli")
             br
             label() Descrition:
-            input(name = "description" type = "text"  placeholder = "")
+            input(name = "description" type = "textarea"  placeholder = "")
             br
             label() Prix:
             input(name = "price" type = "number" required placeholder = "4000")
