--- a/views/editProduct.pug
+++ b/views/editProduct.pug
@@ -19,7 +19,7 @@ block content
             input(name = "name" type = "text" value = product.name)
             br
             label() Descrition:
-            input(name = "description" type = "text"  value = product.description)
+            textarea(name = "description"   value = product.description)
             br
             label() Prix:
             input(name = "price" type = "number" required value = product.price)
