--- a/views/newProduct.pug
+++ b/views/newProduct.pug
@@ -17,7 +17,8 @@ block content
             label() Nom:
             input(name = "name" type = "text" required placeholder = "Doritos Sweet Hot Chilli")
             br
-            label() Descrition:
+            label() Description:
+            br
             textarea(name = "description"  placeholder = "")
             br
             label() Prix:
