other minor fix

--- a/views/orders.pug
+++ b/views/orders.pug
@@ -10,5 +10,6 @@ block content
                         a(href='/order/'+order._id)
                             p= '#' + order._id
                             p= 'Prix: '+  order.price + "Fcfa"
+                            p= 'Date:' + order.date
                     .info2
                         p= 'Status:' + order.state
