--- a/views/product.pug
+++ b/views/product.pug
@@ -28,3 +28,13 @@ block content
     br
     br
     br
+
+script.
+
+    function displayTags(){
+        //auto-complete
+        //
+    }
+    function getTags(){
+
+    }
