--- a/views/signup.pug
+++ b/views/signup.pug
@@ -7,7 +7,7 @@ block content
             input(name = "name" type = "text" placeholder="Nom\(optional\)")
             br
             label() +241
-            input(name= 'number' type= 'text' placeholder='Numero de telephone')
+            input(name= 'number' type= 'text' required placeholder='Numero de telephone')
             br
             input(name = "email" type = "email" required placeholder = "Addresse Email")
             br
