--- a/views/clientLayout.pug
+++ b/views/clientLayout.pug
@@ -26,7 +26,14 @@ html
 
 
 script(src='/javascripts/file.js')
+script(src='/javascripts/jquery-3.5.1.min.js')
+script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
+script( src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.27/jquery.autocomplete.min.js")
 script.
+
+    $( document ).ready(function() {
+      alert('hello');
+    });
 
     cartId = `#{cart}`
     getNumberItem(`${cartId}`)
