--- a/views/newProduct.pug
+++ b/views/newProduct.pug
@@ -1,150 +1,97 @@
 extends layout
 
 block content
-    include partials/nav
+
+    h5 Creer un nouveau produit
     br
-    h3 Admin page
-    hr
-    br
-    include partials/sidenav
-    .main
-        h5 Creer un nouveau produit
+    form(action = "/admin/product/create" method = "POST" encType="multipart/form-data")
+        label() Image:
+        input(type="file" name="img")
         br
-        form(action = "/admin/product/create" method = "POST" encType="multipart/form-data")
-            label() Image:
-            input(type="file" name="img")
-            br
-            label() Nom:
-            input(name = "name" type = "text" required placeholder = "Doritos Sweet Hot Chilli")
-            br
-            label() Description:
-            br
-            textarea(name = "description"  placeholder = "")
-            br
-            label() Prix:
-            input(name = "price" type = "number" required placeholder = "4000")
-            br
-            label() Categorie:
-            .form-group
-                select#exampleFormControlSelect1.form-control(name='category' required)
-                    each cat in categories
-                        option(value= cat.id)= '-----'+cat.name+'-----'
-                        each sub in cat.subCats
-                            option(value=cat.id+'.'+sub.name)= sub.name
+        label() Nom:
+        input(name = "name" type = "text" required placeholder = "Doritos Sweet Hot Chilli")
+        br
+        label() Description:
+        br
+        textarea(name = "description"  placeholder = "" rows="5" cols="50")
+        br
+        label() Prix:
+        input(name = "price" type = "number" required placeholder = "4000")
+        br
+        label() Categorie:
+        .form-group
+            select#exampleFormControlSelect1.form-control(name='category' required)
+                each cat in categories
+                    option(value= cat.id)= '-----'+cat.name+'-----'
+                    each sub in cat.subCats
+                        option(value=cat.id+'.'+sub.name)= sub.name
 
 
 
-            label() Tag:
+            label(for='tags') Tags:
+            input#tags(type='text', name='tags' )
+            p(style='font-size:18px') Separer les tags par des virgules
 
-            input(name='tags' type='text' id='tagName' )
-            div(id='toSelect' style='position:relative')
 
-            div(id='selected' style='')
 
             br
             button(type = "Submit") Creer un nouveau produit !
 
 
 
+
+
+
     script.
-        var tags = JSON.parse('!{tags}')
-        console.log(tags)
+        //var tags = JSON.parse('!{tags}')
+        //console.log(tags)
 
-        function autocomplete(inp, arr) {
-          /*the autocomplete function takes two arguments,
-          the text field element and an array of possible autocompleted values:*/
-          var currentFocus;
-          /*execute a function when someone writes in the text field:*/
-          inp.addEventListener("input", function(e) {
-              var a, b, i, val = this.value;
-              /*close any already open lists of autocompleted values*/
-              closeAllLists();
-              if (!val) { return false;}
-              currentFocus = -1;
-              /*create a DIV element that will contain the items (values):*/
-              a = document.createElement("DIV");
-              a.setAttribute("id", this.id + "autocomplete-list");
-              a.setAttribute("class", "autocomplete-items");
-              /*append the DIV element as a child of the autocomplete container:*/
-              this.parentNode.appendChild(a);
-              /*for each item in the array...*/
-              for (i = 0; i < arr.length; i++) {
-                /*check if the item starts with the same letters as the text field value:*/
-                if (arr[i].substr(0, val.length).toUpperCase() == val.toUpperCase()) {
-                  /*create a DIV element for each matching element:*/
-                  b = document.createElement("DIV");
-                  /*make the matching letters bold:*/
-                  b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
-                  b.innerHTML += arr[i].substr(val.length);
-                  /*insert a input field that will hold the current array item's value:*/
-                  b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
-                  /*execute a function when someone clicks on the item value (DIV element):*/
-                      b.addEventListener("click", function(e) {
-                      /*insert the value for the autocomplete text field:*/
-                      inp.value = this.getElementsByTagName("input")[0].value;
-                      /*close the list of autocompleted values,
-                      (or any other open lists of autocompleted values:*/
-                      closeAllLists();
-                  });
-                  a.appendChild(b);
-                }
-              }
-          });
-          /*execute a function presses a key on the keyboard:*/
-          inp.addEventListener("keydown", function(e) {
-              var x = document.getElementById(this.id + "autocomplete-list");
-              if (x) x = x.getElementsByTagName("div");
-              if (e.keyCode == 40) {
-                /*If the arrow DOWN key is pressed,
-                increase the currentFocus variable:*/
-                currentFocus++;
-                /*and and make the current item more visible:*/
-                addActive(x);
-              } else if (e.keyCode == 38) { //up
-                /*If the arrow UP key is pressed,
-                decrease the currentFocus variable:*/
-                currentFocus--;
-                /*and and make the current item more visible:*/
-                addActive(x);
-              } else if (e.keyCode == 13) {
-                /*If the ENTER key is pressed, prevent the form from being submitted,*/
-                e.preventDefault();
-                if (currentFocus > -1) {
-                  /*and simulate a click on the "active" item:*/
-                  if (x) x[currentFocus].click();
-                }
-              }
-          });
-          function addActive(x) {
-            /*a function to classify an item as "active":*/
-            if (!x) return false;
-            /*start by removing the "active" class on all items:*/
-            removeActive(x);
-            if (currentFocus >= x.length) currentFocus = 0;
-            if (currentFocus < 0) currentFocus = (x.length - 1);
-            /*add class "autocomplete-active":*/
-            x[currentFocus].classList.add("autocomplete-active");
-          }
-          function removeActive(x) {
-            /*a function to remove the "active" class from all autocomplete items:*/
-            for (var i = 0; i < x.length; i++) {
-              x[i].classList.remove("autocomplete-active");
-            }
-          }
-          function closeAllLists(elmnt) {
-            /*close all autocomplete lists in the document,
-            except the one passed as an argument:*/
-            var x = document.getElementsByClassName("autocomplete-items");
-            for (var i = 0; i < x.length; i++) {
-              if (elmnt != x[i] && elmnt != inp) {
-              x[i].parentNode.removeChild(x[i]);
-            }
-          }
-          }
-            /*execute a function when someone clicks in the document:*/
-            document.addEventListener("click", function (e) {
-                closeAllLists(e.target);
-            });
-        }
+        $( function() {
 
-        autocomplete(document.getElementById("tagName"), ['abcd','efgh']);
+            function split( val ) {
+                return val.split( /,\s*/ );
+            }
+            function extractLast( term ) {
+                return split( term ).pop();
+            }
+
+            $( "#tags" )
+              // don't navigate away from the field on tab when selecting an item
+              .on( "keydown", function( event ) {
+                if ( event.keyCode === $.ui.keyCode.TAB &&
+                    $( this ).autocomplete( "instance" ).menu.active ) {
+                  event.preventDefault();
+                }
+              })
+              .autocomplete({
+                minLength: 0,
+                source: function( request, response ) {
+                  $.ajax({
+                      type : 'Get',
+                      url: '/admin/getTags',
+                      success: function(data) {
+                          $('input.suggest-user').removeClass('ui-autocomplete-loading');
+                          // hide loading image
+                          // delegate back to autocomplete, but extract the last term
+                          response( $.ui.autocomplete.filter(
+                            data, extractLast( request.term ) ) );
+                        },
+                  })
+                 },
+                focus: function() {
+                  // prevent value inserted on focus
+                  return false;
+                },
+                select: function( event, ui ) {
+                  var terms = split( this.value );
+                  // remove the current input
+                  terms.pop();
+                  // add the selected item
+                  terms.push( ui.item.value );
+                  // add placeholder to get the comma-and-space at the end
+                  terms.push( "" );
+                  this.value = terms.join( ", " );
+                  return false;
+                }
+              });
+        } );
