--- a/views/editProduct.pug
+++ b/views/editProduct.pug
@@ -1,41 +1,94 @@
 extends layout
 
 block content
-    include partials/nav
-    br
-    h3 Admin page
-    hr
-    br
-    include partials/sidenav
-    .main
-        h5 Modifer un produit
-        bk
-        form(action = "/admin/product/"+product._id+"/edit" method = "POST" encType="multipart/form-data")
-            label() Image:
-            input(type="file" name="img")
-            img(src=product.imgPath)
-            br
-            label() Nom:
-            input(name = "name" type = "text" value = product.name)
-            br
-            label() Descrition:
-            br
-            textarea(name = "description"   value = product.description)
-            br
-            label() Prix:
-            input(name = "price" type = "number" required value = product.price)
-            br
-            label() Categorie:
-            .form-group
-                select#exampleFormControlSelect1.form-control(name='category' required)
-                    each cat in categories
-                        option(value= cat.id)= '-----'+cat.name+'-----'
-                        each sub in cat.subCats
-                            if(product.subCat == sub.name)
-                                option(value=cat.id+'.'+sub.name selected)=sub.name
-                            else
-                                option(value=cat.id+'.'+sub.name)= sub.name
+    h5 Modifer un produit
+    bk
+    form(action = "/admin/product/"+product._id+"/edit" method = "POST" encType="multipart/form-data")
+        label() Image:
+        input(type="file" name="img")
+        img(src=product.imgPath)
+        br
+        label() Nom:
+        input(name = "name" type = "text" value = product.name)
+        br
+        label() Descrition:
+        br
+        textarea(name = "description"   value = product.description)
+        br
+        label() Prix:
+        input(name = "price" type = "number" required value = product.price)
+        br
+        label() Categorie:
+        .form-group
+            select#exampleFormControlSelect1.form-control(name='category' required)
+                each cat in categories
+                    option(value= cat.id)= '-----'+cat.name+'-----'
+                    each sub in cat.subCats
+                        if(product.subCat == sub.name)
+                            option(value=cat.id+'.'+sub.name selected)=sub.name
+                        else
+                            option(value=cat.id+'.'+sub.name)= sub.name
+
+        label(for='tags') Tags:
+        input#tags(type='text', name='tags' value=product.tags)
+        p(style='font-size:18px') Separer les tags par des virgules
 
 
-            br
-            button(type = "Submit") Sauvegarder les modifications !
+
+        br
+        button(type = "Submit") Sauvegarder les modifications !
+
+    script.
+        let tagsValue = '!{product.tags}'
+        console.log(tagsValue)
+        let tagsField = document.getElementById("tags")
+        tagsField.value = tagsValue
+        $( function() {
+
+            function split( val ) {
+                return val.split( /,\s*/ );
+            }
+            function extractLast( term ) {
+                return split( term ).pop();
+            }
+
+            $( "#tags" )
+              // don't navigate away from the field on tab when selecting an item
+              .on( "keydown", function( event ) {
+                if ( event.keyCode === $.ui.keyCode.TAB &&
+                    $( this ).autocomplete( "instance" ).menu.active ) {
+                  event.preventDefault();
+                }
+              })
+              .autocomplete({
+                minLength: 0,
+                source: function( request, response ) {
+                  $.ajax({
+                      type : 'Get',
+                      url: '/admin/getTags',
+                      success: function(data) {
+                          $('input.suggest-user').removeClass('ui-autocomplete-loading');
+                          // hide loading image
+                          // delegate back to autocomplete, but extract the last term
+                          response( $.ui.autocomplete.filter(
+                            data, extractLast( request.term ) ) );
+                        },
+                  })
+                 },
+                focus: function() {
+                  // prevent value inserted on focus
+                  return false;
+                },
+                select: function( event, ui ) {
+                  var terms = split( this.value );
+                  // remove the current input
+                  terms.pop();
+                  // add the selected item
+                  terms.push( ui.item.value );
+                  // add placeholder to get the comma-and-space at the end
+                  terms.push( "" );
+                  this.value = terms.join( ", " );
+                  return false;
+                }
+              });
+        } );
