--- a/views/admin_order.pug
+++ b/views/admin_order.pug
@@ -4,26 +4,50 @@ block content
     h2= 'Commande #'+order._id
     hr
     .container-fluid
-        h3 Produits
-        .container
-            each item,index in order.list
-                .row
-                    .flex-container
-                        a(href='/product/'+item.product._id)
-                            p= item.product.name
-                        .blah
-                            p= '('+item.product.price +'Fcfa  X  '+  item.quantity +')'
-        .info1
-            p= 'Prix Total:' + order.price + 'Fcfa'
+        h3
+            b Facture
+        .facture
+            table.table(style='border:solid 1px')
+                thead
+                    tr
+                         th(scope='col') #
+                         th(scope='col') Nom
+                         th(scope='col') Quantite
+                         th(scope='col') Prix
+                tbody
+
+                    each item,index in order.list
+                        tr
+                            th(scope='row')= index
+                            td
+                                a(href='/product/'+item.product._id)=item.product.name
+                            td= item.quantity
+                            td.prix= item.product.price
+                    tr
+                        th(scope='row') Total
+                        td
+                        td
+                        td.prix= order.price
+
+
+        .owner
+            label(for='owner')
+            p
+                b Utilisateur:
+            .owner-info(style='margin-left:55px')
+                p= 'Nom: '+ order.owner.name
+                p= 'Addresse: ' +order.owner.address
+                p= 'N* WhatsApp: '+order.owner.phoneNumber
+
         hr
         .info2.form-group
-            label(for='status') Status de commande
-            select(id='status' onChange="updateStatus()").form-control
+            label(for='status')
+                b Status de commande:
+            select(style='margin-left:55px' id='status' onChange="updateStatus()").form-control1
                 option(value='traitement' id='processing') En Traitement
                 option(value='preparation' id='preparing') En Preparation
                 option(value='livraison' id='delivering') En cour de livraison
                 option(value='livree' id='delivered') Livree
-
 
         script.
 
@@ -57,6 +81,20 @@ block content
 
                 console.log(response.name)}
 
+            function commafy (numb) {
+                var str = numb.toString().split('.');
+                if (str[0].length >= 5) {
+                    str[0] = str[0].replace(/(\d)(?=(\d{3})+$)/g, '$1,');
+                }
+                if (str[1] && str[1].length >= 5) {
+                    str[1] = str[1].replace(/(\d{3})/g, '$1 ');
+                }
+                return str.join('.');}
+            for(price of $('.prix')){
+                price.innerHTML = commafy(price.innerHTML) + 'Fcfa'
+            }
+
+
             function selection(){
                 console.log(orderState)
                 let sel = document.getElementById('status')
@@ -66,6 +104,5 @@ block content
                         sel.selectedIndex = j
                         break
                     }
-                }
-            }
+                }}
             selection()
